--- a/index.html
+++ b/index.html
@@ -13,5 +13,35 @@
     <h4>This is Header 4</h4>
     <h5>This is Header 5</h5>
     <h6>This is Header 6</h6>
+
+<p>Lorem ipsum  <strong>dolor sit amet</strong> consectetur adipisicing elit. Quisquam laudantium ea veritatis porro vero <p>
+<br> 
+<p>Nostrum, voluptatem optio debitis, dolorum quo doloremque assumenda numquam repellat itaque magnam quibusdam animi totam?</p>
+
+<ul>
+    <li type="circle">List Item</li>
+    <li type="square">List Item</li>
+    <li>List Item</li>
+    <li>List Item</li>
+    <li>List Item</li>
+    <li>List Item</li>
+    <li>List Item</li>
+    <li>List Item</li>
+</ul>
+<!-- Ordered Lists 
+type='A' is for making the list ABC instead of numerical order-->
+<ol type="A">  
+    <strong>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+        <li>List numbered item</li>
+    </strong>
+    
+</ol>
 </body>
 </html>
