--- a/practice1.html
+++ b/practice1.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Practice</title>
+    <title>Practice1</title>
 </head>
 
-<body>
+<body style="background-color: turquoise">
 
     <form action="https://www.google.com">
         <label for="Birthday">Birthday:</label>
@@ -21,10 +21,8 @@
         <input type="Email" id="Email" placeholder="Email">
         <label for="Password">Password:</label>
         <input type="Password" id="Password" min="10" max="10" placeholder="Password">
-        <input type="Submit">
-        <br>
-        <br>
-        <br>
+        <input type="Submit"><br><br><br>
+
         <fieldset>
             <legend>Who is The GOAT?</legend>
             <label for="MJ">MJ</label>
@@ -33,8 +31,7 @@
             <input type="radio" id="LBJ" placeholder="LBJ">
             <label for="KB">KB</label>
             <input type="radio" id="KB" placeholder="KB">
-            <input type="submit">
-            <br>
+            <input type="submit"><br>
         </fieldset>
         <br><br><br>
 
@@ -82,7 +79,7 @@
 
     <br>
 
-    <H2 style="background-color:yellow" style="color:black">Stats :</H2>
+    <H2 style=> <ins>Stats</ins>:</H2>
 
     <br>
 
@@ -95,7 +92,7 @@
             <th style="background-color: red">Points</th>
             <th style="background-color: red">Points Per Game</th>
         </thead>
-        <tbody align="center">
+        <tbody align="center" style="background-color: whitesmoke">
             <tr>
                 <td><strong>Michael Jordan</strong></td>
                 <td>3,935</td>
@@ -121,13 +118,9 @@
                 <td>25.1</td>
             </tr>
         </tbody>
-    </table>
+    </table><br>
 
-    <br>
-
-    <h3 style="background-color:yellow" style="color:black">Things To Consider:</h3>
-
-    <br>
+    <h3><ins>Things To Consider</ins>:</h3><br>
 
     <ul>
         <li>Assists</li>
