--- a/practice1.html
+++ b/practice1.html
@@ -84,16 +84,16 @@
     <br>
 
     <table border="1" width="1000" height="300">
-        <thead>
-            <th style="background-color: red">Player Name</th>
-            <th style="background-color:red">Assists</th>
-            <th style="background-color:red">Steals</th>
-            <th style="background-color:red">Blocks</th>
-            <th style="background-color: red">Points</th>
-            <th style="background-color: red">Points Per Game</th>
+        <thead style="background-color: red">
+            <th style="font-size: 30px">Player Name</th>
+            <th style="font-size: 30px">Assists</th>
+            <th style="font-size: 30px">Steals</th>
+            <th style="font-size: 30px">Blocks</th>
+            <th style="font-size: 30px">Points</th>
+            <th style="font-size: 30px">PPG</th>
         </thead>
         <tbody align="center" style="background-color: whitesmoke">
-            <tr>
+            <tr style="font-size: 30px">
                 <td><strong>Michael Jordan</strong></td>
                 <td>3,935</td>
                 <td>1,815</td>
@@ -101,7 +101,7 @@
                 <td>21,541</td>
                 <td>32.3</td>
             </tr>
-            <tr>
+            <tr style="font-size: 30px">
                 <td><strong>Lebron James</strong></td>
                 <td>6,475</td>
                 <td>1,595</td>
@@ -109,7 +109,7 @@
                 <td>25,657</td>
                 <td>27.3</td>
             </tr>
-            <tr>
+            <tr style="font-size: 30px">
                 <td><strong>Kobe Bryant</strong></td>
                 <td>4,401</td>
                 <td>1,441</td>
@@ -122,7 +122,7 @@
 
     <h3><ins>Things To Consider</ins>:</h3><br>
 
-    <ul>
+    <ul style="font-family:'Courier New', Courier, monospace">
         <li>Assists</li>
         <li>Steals</li>
         <li>Blocks</li>
@@ -130,6 +130,7 @@
         <li>PPG</li>
         <li>Blocks</li>
     </ul>
+
 
 
 </body>
