--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noman Rashid Resume</title>
 </head>
-<body>
-    <h1>Noman Rashid</h1>
+<body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif"">
+    <h1 style="font-size:40px">Noman Rashid</h1>
 
     <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) <strong>Phone:</strong> (630)-890-3247 <strong>Email:</strong> nprashid143@outlook.com</p>
     <hr>
@@ -32,11 +32,11 @@
         <li>Well acquainted with all phases of SDLC and STLC.</li>
         <li>Proficient in devising all the artifacts of testing such as test scenarios, test cases, defect reports and
             test summary report</li>
-        <li>Worked in an Agile setting</li>
+        <li>Experience working in an Agile setting</li>
     </ul>
     <br>
     <h2 style="color:red">Experience</h2>
-    <p>May 2018 - Present</p>
+    <p style="color:slategray">May 2018 - Present</p>
     <p><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
     <ul>
         <li>Testing in different environments (Dev, Production, etc.)</li>
