--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noman Rashid Resume</title>
 </head>
-<body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif"">
+<body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
     <h1 style="font-size:40px">Noman Rashid</h1>
 
     <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) <strong>Phone:</strong> (630)-890-3247 <strong>Email:</strong> nprashid143@outlook.com</p>
