--- a/resume.html
+++ b/resume.html
@@ -10,8 +10,8 @@
 <body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
     <h1 style="font-size:40px">Noman Rashid</h1>
 
-    <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) <strong>Phone:</strong> (630)-890-3247 <strong>Email:</strong> nprashid143@outlook.com</p>
-    <hr>
+    <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) | <strong>Phone:</strong> (630)-890-3247 | <strong>Email:</strong> nprashid143@outlook.com</p>
+    <hr "border=1">
     <br>
 
     <h2 style="color:red">Summary</h2>
