--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noman Rashid Resume</title>
+    <style type="text/css" media="screen">
+
+
+    h2{
+    font-family: 'Courier New', Courier, monospace;
+    
+    }
+</style>
 </head>
 <body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
     <h1 style="font-size:40px">Noman Rashid</h1>
 
     <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) | <strong>Phone:</strong> (630)-890-3247 | <strong>Email:</strong> nprashid143@outlook.com</p>
-    <hr "border=1">
+    <hr>
     <br>
 
     <h2 style="color:red">Summary</h2>
