--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
     <hr>
     <br>
 
-    <h2 style="color:red">Summary</h2>
+    <h2 style="color:red"> <ins>Summary</ins></h2>
     <p>Seeking an entry level or junior level front end developer position to contribute and grow within the workplace
         environment. Self-driven and self-motivated individual who is committed to be a diligent professional and
         provide quality service to end-users while operating as an essential member of a team. Self-motivated,
@@ -30,7 +30,7 @@
         goals and objects. Good written, communication, interpersonal skills, proven team player with an analytical
         mind bent to problem solving and delivering solutions</p>
     <br>
-    <h2 style="color:red">Technical Skills</h2>
+    <h2 style="color:red"> <ins>Technical Skills</ins></h2>
     <ul>
         <li>Proficient in HTML/CSS, JavaScript, Git</li>
         <li>Knowledge and experience using SQL</li>
@@ -43,7 +43,7 @@
         <li>Experience working in an Agile setting</li>
     </ul>
     <br>
-    <h2 style="color:red">Experience</h2>
+    <h2 style="color:red"><ins>Experience</ins></h2>
     <p style="color:slategray">May 2018 - Present</p>
     <p><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
     <ul>
