--- a/quiz4.html
+++ b/quiz4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Register</title>
+    <link rel="stylesheet" href="quiz4.css">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
             <br><br>
         </div>
 
-        <label for="Terms">I agree to the terms and conditions</label>
+        <label for="Terms">I agree to the terms and conditions:</label>
         <input type="checkbox">
         <button>Submit</button>
 
