--- a/resume.html
+++ b/resume.html
@@ -6,59 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noman Rashid Resume</title>
+    <link rel="stylesheet" href="resume.css">
 
 
-    h2{
-    font-family: 'Courier New', Courier, monospace;
-    
-    }
-</style>
 </head>
-<body style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
-    <h1 style="font-size:40px">Noman Rashid</h1>
 
-    <p> <Strong>Address:</Strong> Elgin, IL 60120 (Open to Relocate) | <strong>Phone:</strong> (630)-890-3247 | <strong>Email:</strong> nprashid143@outlook.com</p>
+<body>
+    
+        <div>
+            <h1 class="heading1">Noman Rashid</h1>
+            <p class="basic"> <img src="https://cdn0.iconfinder.com/data/icons/buntu-mobile/100/gps_glyph_convert-512.png">
+                </a> Elgin, IL 60120 (Open to Relocate) <br> <img src="https://cdn4.iconfinder.com/data/icons/rcons-phone/16/handset_round-2-512.png">
+                (630)-890-3247 <br> <img src="https://image.flaticon.com/icons/svg/59/59965.svg">
+                nprashid143@outlook.com
+                <br> <img src="https://image.flaticon.com/icons/svg/174/174857.svg"> <a href="https://www.linkedin.com/in/noman-rashid">LinkedIn</a></p>
+        </div>
+    <br>
     <hr>
-    <br>
 
-    <h2 style="color:red"> <ins>Summary</ins></h2>
-    <p>Seeking an entry level or junior level front end developer position to contribute and grow within the workplace
-        environment. Self-driven and self-motivated individual who is committed to be a diligent professional and
-        provide quality service to end-users while operating as an essential member of a team. Self-motivated,
-        energetic and highly ethical in all work-related assignments thus able to immediately contribute to corporate
-        goals and objects. Good written, communication, interpersonal skills, proven team player with an analytical
-        mind bent to problem solving and delivering solutions</p>
+    <section>
+        <h2><ins>Summary</ins></h2>
+        <p>Seeking an entry level or junior level front end developer position to contribute and grow within the
+            workplace
+            environment. Self-driven and self-motivated individual who is committed to be a diligent professional and
+            provide quality service to end-users while operating as an essential member of a team. Self-motivated,
+            energetic and highly ethical in all work-related assignments thus able to immediately contribute to
+            corporate
+            goals and objects. Good written, communication, interpersonal skills, proven team player with an analytical
+            mind bent to problem solving and delivering solutions</p>
+    </section>
+
     <br>
-    <h2 style="color:red"> <ins>Technical Skills</ins></h2>
-    <ul>
-        <li>Proficient in HTML/CSS, JavaScript, Git</li>
-        <li>Knowledge and experience using SQL</li>
-        <li>Adobe Creative Suite (Photoshop, InDesign, Illustrator)</li>
-        <li>Strong knowledge in the area of software testing (Manual and Automation) with a solid understanding of test
-            planning, test design, test execution and defect reporting & tracking.</li>
-        <li>Well acquainted with all phases of SDLC and STLC.</li>
-        <li>Proficient in devising all the artifacts of testing such as test scenarios, test cases, defect reports and
-            test summary report</li>
-        <li>Experience working in an Agile setting</li>
-    </ul>
+    <section>
+        <h2> <ins>Technical Skills</ins></h2>
+        <ul>
+            <li>Proficient in HTML/CSS, JavaScript, Git</li>
+            <li>Knowledge and experience using SQL</li>
+            <li>Adobe Creative Suite (Photoshop, InDesign, Illustrator)</li>
+            <li>Strong knowledge in the area of software testing (Manual and Automation) with a solid understanding of
+                test
+                planning, test design, test execution and defect reporting & tracking.</li>
+            <li>Well acquainted with all phases of SDLC and STLC.</li>
+            <li>Proficient in devising all the artifacts of testing such as test scenarios, test cases, defect reports
+                and
+                test summary report</li>
+            <li>Experience working in an Agile setting</li>
+        </ul>
+    </section>
+
     <br>
-    <h2 style="color:red"><ins>Experience</ins></h2>
-    <p style="color:slategray">May 2018 - Present</p>
-    <p><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
-    <ul>
-        <li>Testing in different environments (Dev, Production, etc.)</li>
-        <li>Providing objective feedback to software development project team</li>
-        <li>Attend meetings on a daily basis (Agile environment)</li>
-        <li>GIMP - for testing font size and colors </li>
-        <li>Fiddler - to slow down the connection to check how software adjusts </li>
-        <li>TargetProcess - to write test plans and cases, log and verify bugs, change the state of the story </li>
-        <li>Confluence - to regularly update with any relevant documents for the sprint </li>
-        <li>Slack - to communicate with the team and others who work in the company</li>
-        <li>SQL - used to gather data for testing purposes</li>
-        <li>Daily Team Stand up, Daily QA stand up, Grooming every sprint, Retrospective/Planning at the end of sprint,
-            Sprint Review/Demo, Sprint Handoff to system testers after finishing Sprint, Monthly QA team meetings,
-            Weekly Company Financial Report Meetings</li>
-    </ul>
+    <section>
+        <h2><ins>Experience</ins></h2>
+        <p class="company">May 2018 - Present</p>
+        <p class="company"><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
+        <ul>
+            <li>Testing in different environments (Dev, Production, etc.)</li>
+            <li>Providing objective feedback to software development project team</li>
+            <li>Attend meetings on a daily basis (Agile environment)</li>
+            <li>GIMP - for testing font size and colors </li>
+            <li>Fiddler - to slow down the connection to check how software adjusts </li>
+            <li>TargetProcess - to write test plans and cases, log and verify bugs, change the state of the story </li>
+            <li>Confluence - to regularly update with any relevant documents for the sprint </li>
+            <li>Slack - to communicate with the team and others who work in the company</li>
+            <li>SQL - used to gather data for testing purposes</li>
+            <li>Daily Team Stand up, Daily QA stand up, Grooming every sprint, Retrospective/Planning at the end of
+                sprint,
+                Sprint Review/Demo, Sprint Handoff to system testers after finishing Sprint, Monthly QA team meetings,
+                Weekly Company Financial Report Meetings</li>
+        </ul>
+        <p class="company">Apr 2017 – Apr 2018 </p>
+        <p class="company"><strong>Point of Solutions, Schaumburg, IL</strong> - <em>QA Analyst Intern</em></p>
+        <ul>
+            <li>Participated in Sprint planning, test design, test execution, and defect reporting & tracking using
+                JIRA
+            </li>
+            <li>Automating Web Application Testing using Selenium WebDriver with TestNG framework </li>
+            <li>Developed and executed test plans and test cases</li>
+            <li>Actively worked in Agile testing methodology and participated in daily SCRUM meetings</li>
+            <li>Shadowing QA team members as well as Developers</li>
+        </ul>
+    </section>
+
 
 </body>
 
