--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 
 <body>
     
-        <div>
+        <div class="head">
             <h1 class="heading1">Noman Rashid</h1>
             <p class="basic"> <img src="https://cdn0.iconfinder.com/data/icons/buntu-mobile/100/gps_glyph_convert-512.png">
                 </a> Elgin, IL 60120 (Open to Relocate) <br> <img src="https://cdn4.iconfinder.com/data/icons/rcons-phone/16/handset_round-2-512.png">
@@ -22,9 +22,9 @@
                 <br> <img src="https://image.flaticon.com/icons/svg/174/174857.svg"> <a href="https://www.linkedin.com/in/noman-rashid">LinkedIn</a></p>
         </div>
     <br>
-    <hr>
 
-    <section>
+
+    <section class="section1">
         <h2><ins>Summary</ins></h2>
         <p>Seeking an entry level or junior level front end developer position to contribute and grow within the
             workplace
@@ -74,6 +74,7 @@
                 Sprint Review/Demo, Sprint Handoff to system testers after finishing Sprint, Monthly QA team meetings,
                 Weekly Company Financial Report Meetings</li>
         </ul>
+    
         <p class="company">Apr 2017 – Apr 2018 </p>
         <p class="company"><strong>Point of Solutions, Schaumburg, IL</strong> - <em>QA Analyst Intern</em></p>
         <ul>
