--- a/resume.html
+++ b/resume.html
@@ -15,12 +15,14 @@
     
         <div class="head">
             <h1 class="heading1">Noman Rashid</h1>
+            <div>
             <p class="basic"> <img src="https://cdn0.iconfinder.com/data/icons/buntu-mobile/100/gps_glyph_convert-512.png">
                 </a> Elgin, IL 60120 (Open to Relocate) <br> <img src="https://cdn4.iconfinder.com/data/icons/rcons-phone/16/handset_round-2-512.png">
                 (630)-890-3247 <br> <img src="https://image.flaticon.com/icons/svg/59/59965.svg">
                 nprashid143@outlook.com
                 <br> <img src="https://image.flaticon.com/icons/svg/174/174857.svg"> <a href="https://www.linkedin.com/in/noman-rashid">LinkedIn</a></p>
-        </div>
+            </div>
+            </div>
     <br>
 
 
