--- a/resume.html
+++ b/resume.html
@@ -59,8 +59,9 @@
     <br>
     <section>
         <h2><ins>Experience</ins></h2>
-        <p class="company">May 2018 - Present</p>
-        <p class="company"><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
+        <div class="company">
+        <p>May 2018 - Present</p>
+        <p><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
         <ul>
             <li>Testing in different environments (Dev, Production, etc.)</li>
             <li>Providing objective feedback to software development project team</li>
@@ -76,9 +77,10 @@
                 Sprint Review/Demo, Sprint Handoff to system testers after finishing Sprint, Monthly QA team meetings,
                 Weekly Company Financial Report Meetings</li>
         </ul>
-    
-        <p class="company">Apr 2017 – Apr 2018 </p>
-        <p class="company"><strong>Point of Solutions, Schaumburg, IL</strong> - <em>QA Analyst Intern</em></p>
+    </div>
+        <div class="company">
+        <p>Apr 2017 – Apr 2018 </p>
+        <p><strong>Point of Solutions, Schaumburg, IL</strong> - <em>QA Analyst Intern</em></p>
         <ul>
             <li>Participated in Sprint planning, test design, test execution, and defect reporting & tracking using
                 JIRA
@@ -87,6 +89,7 @@
             <li>Developed and executed test plans and test cases</li>
             <li>Actively worked in Agile testing methodology and participated in daily SCRUM meetings</li>
             <li>Shadowing QA team members as well as Developers</li>
+        </div>
         </ul>
     </section>
 
