--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noman Rashid Resume</title>
     <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
 </head>
@@ -16,17 +17,17 @@
         <div class="head">
             <h1 class="heading1">Noman Rashid</h1>
             <div>
-            <p class="basic"> <img src="https://cdn0.iconfinder.com/data/icons/buntu-mobile/100/gps_glyph_convert-512.png">
-                </a> Elgin, IL 60120 (Open to Relocate) <br> <img src="https://cdn4.iconfinder.com/data/icons/rcons-phone/16/handset_round-2-512.png">
-                (630)-890-3247 <br> <img src="https://image.flaticon.com/icons/svg/59/59965.svg">
+            <p class="basic"> <i class="fas fa-address-card"></i>
+                </a> Elgin, IL 60120 (Open to Relocate) <br> <i class="fas fa-phone-square"></i>
+                (630)-890-3247 <br> <i class="fas fa-envelope-square"></i>
                 nprashid143@outlook.com
-                <br> <img src="https://image.flaticon.com/icons/svg/174/174857.svg"> <a href="https://www.linkedin.com/in/noman-rashid">LinkedIn</a></p>
+                <br> <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/noman-rashid">LinkedIn</a></p>
             </div>
             </div>
     <br>
 
 
-    <section class="section1">
+    <section>
         <h2><ins>Summary</ins></h2>
         <p>Seeking an entry level or junior level front end developer position to contribute and grow within the
             workplace
@@ -60,7 +61,7 @@
     <section>
         <h2><ins>Experience</ins></h2>
         <div class="company">
-        <p>May 2018 - Present</p>
+        <p class="dates">May 2018 - Present</p> 
         <p><strong>Practice Velocity, Machesney Park, IL</strong> - <em>Embedded Tester</em></p>
         <ul>
             <li>Testing in different environments (Dev, Production, etc.)</li>
@@ -76,10 +77,9 @@
                 sprint,
                 Sprint Review/Demo, Sprint Handoff to system testers after finishing Sprint, Monthly QA team meetings,
                 Weekly Company Financial Report Meetings</li>
-        </ul>
-    </div>
-        <div class="company">
-        <p>Apr 2017 – Apr 2018 </p>
+        </ul> <br>
+    
+        <p class="dates">Apr 2017 – Apr 2018 </p>
         <p><strong>Point of Solutions, Schaumburg, IL</strong> - <em>QA Analyst Intern</em></p>
         <ul>
             <li>Participated in Sprint planning, test design, test execution, and defect reporting & tracking using
@@ -91,6 +91,19 @@
             <li>Shadowing QA team members as well as Developers</li>
         </div>
         </ul>
+    </section>
+
+    <section>
+        <h2>Interests</h2>
+        <div class="interests">
+        <i class="fas fa-book-reader" id="a"></i>
+        <i class="fas fa-gamepad"></i>
+        <i class="fas fa-music"></i>
+        <i class="fas fa-desktop"></i>
+        <i class="fas fa-camera-retro"></i>
+        <i class="fas fa-utensils"></i>
+        <i class="fas fa-basketball-ball" ></i>
+    </div>
     </section>
 
 
