--- a/resume.html
+++ b/resume.html
@@ -94,15 +94,16 @@
     </section>
 
     <section>
-        <h2>Interests</h2>
+        <h2><ins>Interests</ins></h2>
         <div class="interests">
-        <i class="fas fa-book-reader" id="a"></i>
-        <i class="fas fa-gamepad"></i>
-        <i class="fas fa-music"></i>
-        <i class="fas fa-desktop"></i>
-        <i class="fas fa-camera-retro"></i>
-        <i class="fas fa-utensils"></i>
-        <i class="fas fa-basketball-ball" ></i>
+        <img src="https://www.svgrepo.com/show/33452/pc-coding.svg">
+        <img src="https://cdn1.iconfinder.com/data/icons/education-vol-1-1/64/026-512.png">
+        <img src="https://cdn0.iconfinder.com/data/icons/mobile-development-icons/256/Game_controller.png">
+        <img src="https://png.icons8.com/metro/1600/music.png">
+        <img src="https://cdn1.iconfinder.com/data/icons/iconmart-web-icons-2/64/desktop-512.png">
+        <img src="https://cdn3.iconfinder.com/data/icons/multimedia/100/camera_1-512.png">
+        <img src="https://image.freepik.com/free-icon/restaurant-cutlery-circular-symbol-of-a-spoon-and-a-fork-in-a-circle_318-61086.jpg">
+        <img src="https://cdn1.iconfinder.com/data/icons/education-set-4/512/basketball-2-512.png">
     </div>
     </section>
 
