--- a/js_sandbox/practice1.html
+++ b/js_sandbox/practice1.html
@@ -16,6 +16,6 @@
     <!-- <script src="03typeConversion.js"></script> -->
     <!-- <script src="05numbers.js"></script> -->
     <!-- <script src="06stringMethods.js"></script> -->
-    <script src="practice1.js"></script>
+    <script src="switches.js"></script>
 </body>
 </html>
