--- a/js_sandbox/templateLiterals.html
+++ b/js_sandbox/templateLiterals.html
@@ -9,6 +9,7 @@
 <body>
     <h1>JavaScript Sandbox</h1>
     
-    <script src="templateLiterals.js"></script>
+    <script src="loops.js"></script>
+    
 </body>
 </html>
