--- a/js_sandbox/templateLiterals.html
+++ b/js_sandbox/templateLiterals.html
@@ -9,7 +9,7 @@
 <body>
     <h1>JavaScript Sandbox</h1>
     
-    <script src="loops.js"></script>
+    <script src="questions.js"></script>
     
 </body>
 </html>
