--- a/dom_manipulation/index.html
+++ b/dom_manipulation/index.html
@@ -73,7 +73,8 @@
   <!-- <script src="documentObject.js"></script> -->
   <!-- <script src="domSelectors-singleElements.js"></script> -->
   <!-- <script src="domSelectors-multipleElements.js"></script> -->
-  <script src="traversingDOM.js"></script>
+  <!-- <script src="traversingDOM.js"></script> -->
+  <script src="creatingElements.js"></script>
 </body>
 
 </html>
