--- a/dom_manipulation/index.html
+++ b/dom_manipulation/index.html
@@ -25,12 +25,12 @@
                   <label for="task">New Task</label>
                 </div>
             </div>
-            <input type="submit" value="Add Task" class="btn">
+            <input id="button1" type="submit" value="Add Task" class="btn">
             </form>
           </div>
           <div class="card-action">
             <h5 id="task-title">Tasks</h5>
-            <ul class="collection">
+            <ul id="list-group" class="collection">
               <li class="collection-item">
                 List Item
                 <a href="#" class="delete-item secondary-content">
@@ -62,7 +62,7 @@
                 </a>
               </li>
             </ul>
-            <a class="clear-tasks btn black" href="">Clear Tasks</a>
+            <button id="button2" class="clear-tasks btn black" href="">Clear Tasks</button>
           </div>
         </div>
       </div>
@@ -74,7 +74,8 @@
   <!-- <script src="domSelectors-singleElements.js"></script> -->
   <!-- <script src="domSelectors-multipleElements.js"></script> -->
   <!-- <script src="traversingDOM.js"></script> -->
-  <script src="creatingElements.js"></script>
+  <!-- <script src="creatingElements.js"></script> -->
+  <script src="Practice.js"></script>
 </body>
 
 </html>
